@@ -1,9 +1,0 @@
-/**
- * Styles that apply to both issues and merge requests.
- */
-
-.issue-form, .merge-request-form {
-  .description {
-    height: 20em;
-  }
-}
