@@ -5,7 +5,7 @@
 
 %hr
 
-= form_for [@project, @milestone], html: {class: "new_milestone form-horizontal gfm-form"}  do |f|
+= form_for [@project, @milestone], html: {class: 'form-horizontal milestone-form gfm-form'}  do |f|
   -if @milestone.errors.any?
     .alert.alert-danger
       %ul
@@ -21,7 +21,7 @@
       .form-group
         = f.label :description, "Description", class: "control-label"
         .col-sm-10
-          = f.text_area :description, maxlength: 65535, class: "form-control markdown-area", rows: 10
+          = render 'projects/zen', f: f, attr: :description, classes: 'description form-control'
           .hint
             .pull-left Milestones are parsed with #{link_to "GitLab Flavored Markdown", help_page_path("markdown", "markdown"), target: '_blank'}.
             .pull-left Attach images (JPG, PNG, GIF) by dragging & dropping or #{link_to "selecting them", '#', class: 'markdown-selector' }.
