@@ -11,6 +11,7 @@ v 7.4.0
   - Prevent notes polling when there are not notes
   - API: Add support for forking a project via the API (Bernhard Kaindl)
   - API: filter project issues by milestone (Julien Bianchi)
+  - Zen mode for wiki and milestones (Robert Schilling)
 
 v 7.3.2
   - Fix creating new file via web editor
